# pandoc-tdiary

./: README.md  pandoc-tdiary.cabal
src/Text/Pandoc/Readers/: Tdiary.hs
